--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Library",
     "Seed"
   ],
-  "author": "jhades.dev@gmail.com",
+  "author": "igo1987@gmail.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IonIo/angular2-library-seed/issues"
